// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfobarWidgetsEditionTools component should render widgets edition tools disabled because the widgets are not dirty 1`] = `
<div
  class="footer"
>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-cef1 mr-2 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      Save changes
    </span>
  </button>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-isdisabled-cef1"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      Cancel
    </span>
  </button>
</div>
`;

exports[`InfobarWidgetsEditionTools component should render widgets edition tools enabled because the widgets are dirty and not being saved 1`] = `
<div
  class="footer"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 mr-2 ui-button-fill-cef1 ui-button-primary-cef1"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      Save changes
    </span>
  </button>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      Cancel
    </span>
  </button>
</div>
`;

exports[`InfobarWidgetsEditionTools component should render widgets edition tools loading and disabled, because the widgets are being saved 1`] = `
<div
  class="footer"
>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-cef1 mr-2 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
    type="button"
  >
    <svg
      class="ui-loadingspinner-spinner-4660 ui-loadingspinner-gloom-4660 ui-buttonspinner-spinner-a731"
      height="22"
      preserveAspectRatio="xMidYMid meet"
      role="status"
      viewBox="0 0 20 20"
      width="22"
    >
      <circle
        class="ui-loadingspinner-dot-4660"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="ui-loadingspinner-circle-4660"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </svg>
    <span
      class="ui-button-content-cef1"
    >
      Save changes
    </span>
  </button>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-isdisabled-cef1"
    type="button"
  >
    <svg
      class="ui-loadingspinner-spinner-4660 ui-loadingspinner-gloom-4660 ui-buttonspinner-spinner-a731"
      height="22"
      preserveAspectRatio="xMidYMid meet"
      role="status"
      viewBox="0 0 20 20"
      width="22"
    >
      <circle
        class="ui-loadingspinner-dot-4660"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="ui-loadingspinner-circle-4660"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </svg>
    <span
      class="ui-button-content-cef1"
    >
      Cancel
    </span>
  </button>
</div>
`;
